compiler/frontends/spar/testsuite/errnoeach.err
errnoeach.spar:9: syntax error
	each {
	     ^
errnoeach.spar:14: syntax error
}
^
cannot recover from earlier parse errors, goodbye
